tests/health/gold/sdk/tests__lsp__package-warnings__foo.toit.gold
<pkg:pkg1>/pkg1.toit:6:9: error: Unresolved identifier: 'unresolved'
  print unresolved
        ^~~~~~~~~~
